--- a/app/src/main/res/xml/advanced_settings.xml
+++ b/app/src/main/res/xml/advanced_settings.xml
@@ -64,6 +64,24 @@
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
+    <com.hippo.ehviewer.preference.ProxyPreference
+        android:key="proxy"
+        android:title="@string/settings_advanced_proxy"
+        app:iconSpaceReserved="false" />
+
+    <SwitchPreferenceCompat
+        android:defaultValue="false"
+        android:key="built_in_hosts_2"
+        android:summary="@string/settings_advanced_built_in_hosts_summary"
+        android:title="@string/settings_advanced_built_in_hosts_title"
+        app:iconSpaceReserved="false" />
+
+    <Preference
+        android:key="hosts"
+        android:summary="@string/settings_advanced_custom_hosts_summary"
+        android:title="@string/settings_advanced_custom_hosts_title"
+        app:iconSpaceReserved="false" />
+
     <Preference
         android:key="backup_favorite"
         android:summary="@string/settings_advanced_backup_favorite_summary"
