--- a/app/src/main/res/xml/advanced_settings.xml
+++ b/app/src/main/res/xml/advanced_settings.xml
@@ -73,6 +73,13 @@
         android:title="@string/settings_advanced_custom_hosts_title"
         app:iconSpaceReserved="false" />
 
+    <com.hippo.ehviewer.preference.UserAgentPreference
+        android:key="user_agent"
+        android:title="@string/settings_advanced_user_agent_title"
+        app:iconSpaceReserved="false"
+        app:negativeButtonText="@android:string/cancel"
+        app:positiveButtonText="@android:string/ok" />
+
     <Preference
         android:key="backup_favorite"
         android:summary="@string/settings_advanced_backup_favorite_summary"
