--- a/app/src/main/res/xml/advanced_settings.xml
+++ b/app/src/main/res/xml/advanced_settings.xml
@@ -62,9 +62,15 @@
 
     <SwitchPreferenceCompat
         android:defaultValue="false"
-        android:key="dns_over_https"
-        android:summary="@string/settings_advanced_dns_over_http_summary"
-        android:title="@string/settings_advanced_dns_over_http_title"
+        android:key="built_in_hosts_2"
+        android:summary="@string/settings_advanced_built_in_hosts_summary"
+        android:title="@string/settings_advanced_built_in_hosts_title"
+        app:iconSpaceReserved="false" />
+
+    <Preference
+        android:key="hosts"
+        android:summary="@string/settings_advanced_custom_hosts_summary"
+        android:title="@string/settings_advanced_custom_hosts_title"
         app:iconSpaceReserved="false" />
 
     <com.hippo.ehviewer.preference.UserAgentPreference
