--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -96,17 +96,17 @@
 
     <SeekBarPreference
         android:defaultValue="40"
-        android:key="list_tile_size"
+        android:key="list_cover_size"
         android:max="60"
         android:title="@string/settings_eh_list_tile_thumb_size"
         app:iconSpaceReserved="false"
-        app:min="20"
+        app:min="35"
         app:showSeekBarValue="true"
         app:singleLineTitle="false" />
 
     <SeekBarPreference
         android:defaultValue="4"
-        android:key="thumb_size_"
+        android:key="cover_size"
         android:max="10"
         android:title="@string/settings_eh_thumb_size"
         app:iconSpaceReserved="false"
