--- a/app/src/main/res/layout/dialog_gallery_menu.xml
+++ b/app/src/main/res/layout/dialog_gallery_menu.xml
@@ -196,7 +196,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:max="15"
-                android:min="2" />
+                android:min="1" />
 
         </LinearLayout>
 
@@ -206,6 +206,29 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_read_volume_page"
             android:textColor="?android:attr/textColorPrimary" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="4"
+                android:text="@string/settings_read_volume_page_interval"
+                android:textColor="?android:attr/textColorPrimary" />
+
+            <SeekBar
+                android:id="@+id/volume_page_interval"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:max="14"
+                android:min="0" />
+
+        </LinearLayout>
 
         <Switch
             android:id="@+id/reverse_volume_page"
