--- a/app/src/main/res/layout/item_gallery_list.xml
+++ b/app/src/main/res/layout/item_gallery_list.xml
@@ -48,25 +48,6 @@
             android:layout_toRightOf="@id/thumb" />
 
         <TextView
-            android:id="@+id/uploader"
-            style="@style/CardMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_alignLeft="@id/title"
-            android:layout_marginTop="2dp" />
-
-        <TextView
-            android:id="@+id/note"
-            style="@style/CardMessage"
-            android:textStyle="italic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/uploader"
-            android:layout_alignLeft="@id/title"
-            android:layout_marginTop="2dp" />
-
-        <TextView
             android:id="@+id/category"
             style="@style/CardMessage"
             android:layout_width="wrap_content"
@@ -86,6 +67,26 @@
             android:layout_above="@id/category"
             android:layout_alignLeft="@id/title"
             android:layout_marginBottom="4dp" />
+
+        <TextView
+            android:id="@+id/uploader"
+            style="@style/CardMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/rating"
+            android:layout_alignLeft="@id/title"
+            android:layout_marginBottom="2dp" />
+
+        <TextView
+            android:id="@+id/note"
+            style="@style/CardMessage"
+            android:textStyle="italic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/rating"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="6dp"
+            android:paddingRight="2sp" />
 
         <TextView
             android:id="@+id/posted"
