--- a/app/src/main/res/xml/privacy_settings.xml
+++ b/app/src/main/res/xml/privacy_settings.xml
@@ -31,4 +31,11 @@
         app:iconSpaceReserved="false"
         app:summaryOff="@string/settings_privacy_secure_summary"
         app:summaryOn="@string/settings_privacy_secure_summary" />
+
+    <com.hippo.ehviewer.preference.ClearSearchHistoryPreference
+        android:key="clear_search_history"
+        android:summary="@string/settings_privacy_clear_search_history_summary"
+        android:title="@string/settings_privacy_clear_search_history"
+        app:iconSpaceReserved="false" />
+
 </PreferenceScreen>
