Set useLocalePreferredLineHeightForMinimum to false

--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -37,6 +37,7 @@
         android:hint="@string/filter_text">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/FixedLineHeightEditText"
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
