--- a/app/src/main/res/layout/dialog_edittextcheckbox_builder.xml
+++ b/app/src/main/res/layout/dialog_edittextcheckbox_builder.xml
@@ -31,6 +31,7 @@
         android:layout_gravity="center_horizontal">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/FixedLineHeightEditText"
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
