--- a/app/src/main/res/layout/scene_login.xml
+++ b/app/src/main/res/layout/scene_login.xml
@@ -50,6 +50,7 @@
                 android:minWidth="@dimen/single_max_width">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    style="@style/FixedLineHeightEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints="username"
@@ -71,6 +72,7 @@
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    style="@style/FixedLineHeightEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints="password"
